[metadata]
name = ansible
description = Radically simple IT automation
author_email = info@ansible.com
url = https://ansible.com
project_urls =
    Bug Tracker = https://github.com/ansible/ansible/issues
    CI: Shippable = https://app.shippable.com/github/ansible/ansible
    Code of Conduct = https://docs.ansible.com/ansible/latest/community/code_of_conduct.html
    Documentation = https://docs.ansible.com/ansible/
    Mailing lists = https://docs.ansible.com/ansible/latest/community/communication.html#mailing-list-information
    Source Code = https://github.com/ansible/ansible

license = GPLv3+
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    Topic :: Utilities

[options]
package_dir =
        = lib
packages = find:

include_package_data = true

# .. todo:: I have to confirm it works.
# .. seealso:: https://github.com/pypa/setuptools/issues/1787
python_requires = '>=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*'

# Installing as zip files would break due to references to __file__
zip_safe = false

scripts =
    bin/ansible
    bin/ansible-playbook
    bin/ansible-pull
    bin/ansible-doc
    bin/ansible-galaxy
    bin/ansible-console
    bin/ansible-connection
    bin/ansible-vault
    bin/ansible-config
    bin/ansible-inventory

[options.packages.find]
where = lib

[options.package_data]
* = executor/powershell/*.ps1
    module_utils/csharp/*.cs
    module_utils/csharp/*/*.cs
    module_utils/powershell/*.psm1
    module_utils/powershell/*/*.psm1
    modules/windows/*.ps1
    modules/windows/*/*.ps1
    galaxy/data/*/*.*
    galaxy/data/*/*/.*
    galaxy/data/*/*/*.*
    galaxy/data/*/tests/inventory
    config/base.yml
    config/module_defaults.yml

# requires setuptools >= v40.5.0
# [options.data_files]
